<resources>
    <string name="app_name">Funny Art</string>
    <string name="materials">Materials</string>
    <string name="techniques">Techniques</string>
    <string name="collections">Collections</string>
    <string name="favourites">Favourites</string>
    <string name="game">Game</string>
    <string name="next">Continue</string>
    <string name="title_question">What\'s the title of this artwork?</string>
    <string name="author_question">What\'s the author of this artwork?</string>
    <string name="dating_question">What\'s the dating of this artwork?</string>
    <string name="question_type">Question Type</string>
    <string name="questions">Questions</string>
    <string name="success">Success</string>
    <string name="title">Title</string>
    <string name="authorship">Authorship</string>
    <string name="dating">Dating</string>
    <string name="game_score">Game Score</string>
    <string name="categories">Categories</string>
    <string name="empty"/>
    <string name="rijksmuseum">Rijksmuseum</string>
    <string name="met">The Metropolitan Museum of Art</string>
    <string name="chicago">The Art Institute of Chicago</string>
    <string name="cleveland">The Cleveland Museum of Art</string>
    <string name="hardvard">Hardvard Art Museums</string>
    <string name="walters">The Walters Art Museum</string>
    <string name="more_info">More info</string>
    <string name="no_more_questions_info">Sorry, but there is no Questions at this moment</string>
    <string name="puzzle">Puzzle</string>
    <string name="quiz">Quiz</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="ongoing_puzzles">Ongoing Puzzles</string>
</resources>