<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.santukis.cleanarchitecture.game.ui.viewmodels.GameViewModel" />

        <import
            type="com.santukis.cleanarchitecture.game.domain.model.Difficulty"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_action_bar"
            tools:listitem="@layout/element_puzzle_item"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_action_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:paddingStart="@dimen/xlarge_space"
            android:paddingEnd="@dimen/xlarge_space"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/easy_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/medium"
                android:layout_marginStart="@dimen/large_space"
                android:layout_marginEnd="@dimen/large_space"
                android:onClick="@{(v) -> viewmodel.updatePuzzleDifficulty(Difficulty.Easy)}"
                app:tint="@drawable/color_state_primary"
                android:src="@drawable/ic_easy"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/easy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintLeft_toLeftOf="@id/easy"
                app:layout_constraintRight_toRightOf="@id/easy"
                app:layout_constraintTop_toBottomOf="@id/easy"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@drawable/color_state_primary"
                android:text="@string/easy"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/medium_text"
                app:layout_constraintLeft_toRightOf="@id/easy"
                app:layout_constraintRight_toLeftOf="@id/hard"
                android:layout_marginStart="@dimen/large_space"
                android:layout_marginEnd="@dimen/large_space"
                android:onClick="@{(v) -> viewmodel.updatePuzzleDifficulty(Difficulty.Medium)}"
                app:tint="@drawable/color_state_primary"
                android:src="@drawable/ic_medium"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintLeft_toLeftOf="@id/medium"
                app:layout_constraintRight_toRightOf="@id/medium"
                app:layout_constraintTop_toBottomOf="@id/medium"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@drawable/color_state_primary"
                android:text="@string/medium"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/hard_text"
                app:layout_constraintLeft_toRightOf="@+id/medium"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="@dimen/large_space"
                android:layout_marginStart="@dimen/large_space"
                android:onClick="@{(v) -> viewmodel.updatePuzzleDifficulty(Difficulty.Hard)}"
                app:tint="@drawable/color_state_primary"
                android:src="@drawable/ic_hard"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hard_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintLeft_toLeftOf="@id/hard"
                app:layout_constraintRight_toRightOf="@id/hard"
                app:layout_constraintTop_toBottomOf="@id/hard"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@drawable/color_state_primary"
                android:text="@string/hard"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_space"
            android:layout_marginTop="@dimen/normal_space"
            android:layout_marginEnd="@dimen/normal_space"
            android:layout_marginBottom="@dimen/normal_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
